[gd_scene load_steps=13 format=2]

[ext_resource path="res://art/Coin/Coin2.png" type="Texture" id=1]
[ext_resource path="res://art/Coin/Coin5.png" type="Texture" id=2]
[ext_resource path="res://art/Coin/Coin3.png" type="Texture" id=3]
[ext_resource path="res://art/Coin/Coin8.png" type="Texture" id=4]
[ext_resource path="res://art/Coin/Coin6.png" type="Texture" id=5]
[ext_resource path="res://art/Coin/Coin4.png" type="Texture" id=6]
[ext_resource path="res://art/Coin/Coin1.png" type="Texture" id=7]
[ext_resource path="res://art/Coin/Coin7.png" type="Texture" id=8]
[ext_resource path="res://scripts/Coin.gd" type="Script" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 1 ), ExtResource( 3 ), ExtResource( 6 ), ExtResource( 2 ), ExtResource( 5 ), ExtResource( 8 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 12.7019

[sub_resource type="CircleShape2D" id=3]
radius = 80.0

[node name="Coin" type="RigidBody2D"]
contacts_reported = 1
contact_monitor = true
linear_damp = 1.0
script = ExtResource( 9 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
frame = 4
playing = true
offset = Vector2( -0.5, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )
[connection signal="body_entered" from="." to="." method="_on_Coin_body_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
